--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -21,6 +21,7 @@
   padding-bottom: 0px !important;
   color: rgb(72, 72, 72) !important;
   font-weight: 800 !important;
+  text-transform: uppercase;
   margin-left: auto;
   margin-right: auto;
 }
@@ -43,39 +44,42 @@
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  height:585px;
 }
 
 .left {
-  vertical-align: middle;
   text-align: center;
   width: 5%;
   height: 585px;
   float: left;
+  line-height: 585px;
 }
 
 .right {
-  vertical-align: middle;
   text-align: center;
   width: 5%;
   height: 585px;
   float: right;
+  line-height: 585px;
 }
 
 #room-carousel {
   width:90%;
   display: inline-block;
   overflow: hidden;
-  white-space: nowrap
+  white-space: nowrap;
 }
 
 .image-slide {
   display: inline-block;
   width: 33%;
+  height: 100%;
   padding:10px;
   box-sizing: border-box;
 }
 
 .roomEntryImg {
   width: 100%;
+  height: 203px;
   display: inline-block;
 }
