--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,57 +1,57 @@
 .bedroomNum{
-  word-wrap: break-word !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
-  font-size: 12px !important;
-  line-height: 16px !important;
-  letter-spacing: normal !important;
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-  font-weight: 800 !important;
+  word-wrap: break-word ;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif ;
+  font-size: 12px ;
+  line-height: 16px ;
+  letter-spacing: normal ;
+  padding-top: 0px ;
+  padding-bottom: 0px ;
+  font-weight: 800 ;
   color:rgb(155, 49, 67);
   margin-left: auto;
   margin-right: auto;
 }
 
 .roomName {
-  word-wrap: break-word !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
-  font-size: 16px !important;
-  line-height: 22px !important;
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-  color: rgb(72, 72, 72) !important;
-  font-weight: 800 !important;
+  word-wrap: break-word ;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif ;
+  font-size: 16px ;
+  line-height: 22px ;
+  padding-top: 0px ;
+  padding-bottom: 0px ;
+  color: rgb(72, 72, 72) ;
+  font-weight: 800 ;
   text-transform: uppercase;
   margin-left: auto;
   margin-right: auto;
 }
 
 .price {
-  word-wrap: break-word !important;
-  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
-  font-size: 14px !important;
-  line-height: 18px !important;
-  letter-spacing: normal !important;
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-  color: #484848 !important;
-  font-weight: normal !important;
+  word-wrap: break-word ;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif ;
+  font-size: 14px ;
+  line-height: 18px ;
+  letter-spacing: normal ;
+  padding-top: 0px ;
+  padding-bottom: 0px ;
+  color: #484848 ;
+  font-weight: normal ;
   margin-left: auto;
   margin-right: auto;
 }
 
 .rating {
-  font-weight: 600 !important;
-  margin: 0px !important;
-  word-wrap: break-word !important;
-  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
-  font-size: 10px !important;
-  line-height: 16px !important;
-  letter-spacing: normal !important;
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-  color: #484848 !important;
-  display: inline !important;
+  font-weight: 600 ;
+  margin: 0px ;
+  word-wrap: break-word ;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif ;
+  font-size: 10px ;
+  line-height: 16px ;
+  letter-spacing: normal ;
+  padding-top: 0px ;
+  padding-bottom: 0px ;
+  color: #484848 ;
+  display: inline ;
 }
 
 
@@ -97,4 +97,55 @@
   width: 100%;
   height: 203px;
   display: inline-block;
+}
+
+.modal-overlay-div {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, .65);
+}
+
+.modal-content-div {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 10000;
+    overflow: auto;
+    text-align: center;
+    padding: 4px;
+}
+
+.modal-content-div:after {
+    vertical-align: middle;
+    display: inline-block;
+    height: 100%;
+    margin-left: -.05em;
+    content: '';
+}
+
+.modal-dialog-div {
+    position: relative;
+    outline: 0;
+    width: 500px;
+    height: 400px;
+    display: inline-block;
+    vertical-align: middle;
+    box-sizing: border-box;
+    max-width: auto;
+    border-radius: 4px;
+    background-color: white
+}
+
+#slider {
+  width: 50%;
+  vertical-align: middle;
+  margin: auto;
 }
