--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -227,14 +227,14 @@ body {
   border-color: #F2F2F2;
 }
 
-.filtered-btn {
+.filter-on-btn {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
   font-size: 14px;
   line-height: 18px;
   letter-spacing: normal;
   padding-top: 6px;
   padding-bottom: 6px;
-  color: rgb(72, 72, 72);
+  color: rgb(255, 255, 255);
   cursor: pointer;
   display: inline-block;
   padding-left: 12px;
@@ -251,7 +251,7 @@ body {
   border-image: initial;
 }
 
-.filtered-btn:hover {
+.filter-btn:hover {
   background: rgb(0, 108, 112);
   border-color: rgb(0, 108, 112);
 }
