--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -177,28 +177,32 @@ body {
   border-image: initial;
   border-radius: 4px;
   padding: 24px;
-  
-  
 }
 
 .modal-dialog-div {
     position: relative;
     outline: 0;
-    width: 500px;
-    height: 400px;
+    /* width: 500px;
+    height: 400px; */
     display: inline-block;
     vertical-align: middle;
     box-sizing: border-box;
     max-width: auto;
     border-radius: 4px;
     background-color: white;
-    text-align: center;
+
 }
 
-#slider {
-  width: 50%;
+#slider-content {
+  width: 300px;
+  height: 100px;
   vertical-align: middle;
-  margin: auto;
+}
+
+#slider{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  width: 275px;
 }
 
 .main-btn {
@@ -272,6 +276,7 @@ body {
   border-image: initial;
   margin: 0px;
   padding: 0px;
+  float:right;
 }
 
 .clear-btn {
@@ -290,6 +295,7 @@ body {
   border-image: initial;
   margin: 0px;
   padding: 0px;
+  float:left;
 }
 
 .apply-btn:hover,
