--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -176,7 +176,6 @@ body {
   border-color: rgba(0, 0, 0, 0.2);
   border-image: initial;
   border-radius: 4px;
-  padding: 24px;
 }
 
 .modal-dialog-div {
@@ -196,13 +195,24 @@ body {
 #slider-content {
   width: 300px;
   height: 100px;
-  vertical-align: middle;
+  padding:24px;
 }
 
 #slider{
   padding-top: 30px;
   padding-bottom: 30px;
   width: 275px;
+}
+
+#bedrooms-counter-content {
+  width: 300px;
+  height: 100px;
+  padding:24px
+}
+
+.plus-minus-content {
+  float:right;
+  display:inline-block;
 }
 
 .main-btn {
@@ -276,7 +286,9 @@ body {
   border-image: initial;
   margin: 0px;
   padding: 0px;
-  float:right;
+  position:absolute;
+  bottom: 20px;
+  right:24px;
 }
 
 .clear-btn {
@@ -295,7 +307,9 @@ body {
   border-image: initial;
   margin: 0px;
   padding: 0px;
-  float:left;
+  position:absolute;
+  bottom: 20px;
+  left:24px;
 }
 
 .apply-btn:hover,
@@ -309,6 +323,11 @@ body {
 .clear-btn:active {
   color: rgb(0, 108, 112);
   outline: 0px;
+}
+
+#bed-count {
+  padding-left:10px;
+  padding-right:10px;
 }
 
 .plus-minus-btn {
@@ -325,7 +344,7 @@ body {
   border-color: rgb(0, 132, 137);
   background: transparent;
   border-width: 1px;
-  outline:none
+  outline:none;
 }
 
 .plus-minus-btn:active {
