--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -58,55 +58,74 @@ body {
   display: inline ;
 }
 
-
 .carousel-content {
-  /* width: 80%; */
+  width: 80%;
   padding-top:25px;
-  margin-left: auto;
-  margin-right: auto;
+
+  margin:0 auto;
   height:585px;
 }
 
 #carousel {
   display:inline-block;
   box-sizing: border-box;
-  width:80%;
+  width:90%;
   margin-left: auto;
   margin-right: auto;
 }
 
 .left {
   text-align: center;
-  height: 585px;
-  line-height: 585px;
+  /* height: 585px; */
+  /* line-height: 585px; */
   fill:rgb(118, 118, 118);
-  display:inline-block;
-  width: 24px;
+  display:block;
+  /* width: 5%; */
+  height:24px;
   box-sizing: border-box;
-  
+  width:24px;
   /* float: left; */
+  align-content: center;
 }
 
 .right {
   text-align: center;
   /* height: 585px; */
   /* float: right; */
-  line-height: 585px;
+  /* line-height: 585px; */
   fill:rgb(118, 118, 118);
+  display:block;
+  /* width: 5%; */
+  height:24px;
+  width:24px;
+  box-sizing: border-box;
+}
+
+.inline-block {
   display:inline-block;
-  width: 24px;
+  width:24px;
+  height:610px;
+  vertical-align:middle;
+  box-sizing: border-box;
+  margin:0px;
+}
+
+.center {
+  text-align: center;
+  margin: auto;
+  align-content: center;
 }
 
 #room-carousel {
-  /* width:80%; */
-  display: inline-block;
+  width:100%;
+  display: block;
   overflow: hidden;
   white-space: nowrap;
 }
 
 .image-slide {
   display: inline-block;
-  width: 33%;
+  width: 33.33%;
   height: 100%;
   padding:10px;
   box-sizing: border-box;
