--- a/client/src/css/image-gallery.css
+++ b/client/src/css/image-gallery.css
@@ -196,7 +196,8 @@
     position: relative; }
   .image-gallery-slide img {
     width: 100%;
-    height:213px;
+    height:auto;
+    max-width:100%;
     max-height:100%; }
   .image-gallery-slide .image-gallery-description {
     background: rgba(0, 0, 0, 0.4);
