--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -87,8 +87,6 @@ body {
   height:24px;
   box-sizing: border-box;
   width:24px;
-  
-  
 }
 
 .flex-center{
@@ -129,9 +127,9 @@ body {
 }
 
 .room-entry-img {
-  width: 100%;
-  height:100%;
-  /* height: 203px; */
+  max-width:100%;
+  /* max-height:100%; */
+  height: auto;
   display: block;
 }
 
