--- a/client/src/css/image-gallery.css
+++ b/client/src/css/image-gallery.css
@@ -196,7 +196,7 @@
     position: relative; }
   .image-gallery-slide img {
     width: 100%;
-    height:auto;
+    height:213px;
     max-width:100%;
     max-height:100%; }
   .image-gallery-slide .image-gallery-description {
