--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -2,6 +2,46 @@ body {
   margin:0px;
 }
 
+#menu-border {
+  background: rgb(255, 255, 255);
+  position: relative;
+  width:100%;
+  border: 1px solid rgb(219, 219, 219);
+  padding:0px;
+  margin:0px;
+}
+
+#filter-listing-title {
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif ;
+  color: #484848 ;
+  padding-left: 72px;
+  padding-top: 15px;
+  display: flex;
+  width:100%;
+  align-self: flex-start;
+  margin: 0px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.menu {
+  /* background: rgb(255, 255, 255);
+  position: relative;
+  width:100%; */
+  /* border: 1px solid rgb(219, 219, 219); */
+  height: auto;
+  box-sizing: border-box;
+  padding-left: 66px;
+  display:flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  align-items: center;
+  align-content: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 .bedroomNum{
   word-wrap: break-word ;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif ;
@@ -145,25 +185,9 @@ body {
   align-content: center;
 }
 
-.menu {
-  background: rgb(255, 255, 255);
-  position: fixed;
-  width:100%;
-  border: 1px solid rgb(219, 219, 219);
-  height: 65px;
-  box-sizing: border-box;
-  padding-left: 72px;
-  display:flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  flex-wrap: nowrap;
-  align-items: center;
-  align-content: center;
-}
-
 .content {
-    position:absolute;
-    top: 65px;
+    position:relative;
+    top: 0px;
     left:0px;
     right:0px;
     bottom:0px;
@@ -171,8 +195,8 @@ body {
 }
 
 .modal-overlay-div {
-    position: fixed;
-    top: 65px;
+    position: relative;
+    top: 0px;
     right: 0;
     bottom: 0;
     left: 0;
