--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -194,6 +194,12 @@ body {
     overflow-y:scroll;        
 }
 
+#modal-container {
+  position:absolute;
+  width:100%;
+  height:100%;
+}
+
 .modal-overlay-div {
     position: relative;
     top: 0px;
@@ -204,6 +210,7 @@ body {
     width: 100%;
     z-index: 1000;
     background-color: rgba(255, 255, 255, 0.85);
+
 }
 
 /* .modal-content-div {
@@ -219,7 +226,7 @@ body {
 } */
 
 .modal-content-div {
-  position: absolute;
+  position: relative;
   top: 0px;
   left: 0px;
   z-index: 10;
