--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -6,7 +6,8 @@ body {
   background: rgb(255, 255, 255);
   position: relative;
   width:100%;
-  border: 1px solid rgb(219, 219, 219);
+  border-top: 1px solid rgb(219, 219, 219);
+  border-bottom: 1px solid rgb(219, 219, 219);
   padding:0px;
   margin:0px;
 }
@@ -14,6 +15,7 @@ body {
 #filter-listing-title {
   font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif ;
   color: #484848 ;
+  box-sizing: border-box;
   padding-left: 72px;
   padding-top: 15px;
   display: flex;
@@ -29,6 +31,7 @@ body {
   position: relative;
   width:100%; */
   /* border: 1px solid rgb(219, 219, 219); */
+  width: 100%;
   height: auto;
   box-sizing: border-box;
   padding-left: 66px;
@@ -583,4 +586,11 @@ input:checked + .toggle:before {
 
 .toggle.round:before {
   border-radius: 50%;
+}
+
+.room-entry-img:hover {
+  /* -webkit-box-shadow: 3px 3px 5px 6px #ccc;  Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+
+  -moz-box-shadow:    3px 3px 5px 6px #ccc;  Firefox 3.5 - 3.6 */
+  box-shadow: inset 3px 3px 5px 6px #ccc;
+  z-index: -10;
 }
