--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -162,10 +162,10 @@ body {
 
 .image-slide {
   display: inline-block;
-  min-width: 33.33%;
   width: 33.33%;
   height: 100%;
-  padding:10px;
+  padding:20px;
+  margin: auto;
   box-sizing: border-box;
 }
 
@@ -173,6 +173,7 @@ body {
   max-width:100%;
   /* max-height:100%; */
   height: auto;
+  margin: auto;
   display: block;
 }
 
