--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -129,7 +129,7 @@ body {
   height:24px;
   box-sizing: border-box;
   width:24px;
-  align-content: center
+  align-content: center;
   }
 
 .flex-center{
@@ -144,7 +144,7 @@ body {
   height:24px;
   width:24px;
   box-sizing: border-box;
-  align-content: center
+  align-content: center;
   }
 
 .center {
@@ -162,7 +162,8 @@ body {
 
 .image-slide {
   display: inline-block;
-  width: 33.33%;
+  min-width:200px;
+  max-width: 33.33%;
   height: 100%;
   padding:20px;
   margin: auto;
@@ -593,5 +594,5 @@ input:checked + .toggle:before {
   /* -webkit-box-shadow: 3px 3px 5px 6px #ccc;  Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+
   -moz-box-shadow:    3px 3px 5px 6px #ccc;  Firefox 3.5 - 3.6 */
   box-shadow: inset 3px 3px 5px 6px #ccc;
-  z-index: -10;
+  /* z-index: -10; */
 }
